@@ -4,6 +4,8 @@ CHANGE LOG
 
 Changes up to 0.98
 
+   * fixed stereo rendering for selections and edit indicators
+
    * added support for embedded data on stdin
 
    * support for 4-letter residue codes in PDB files
